syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcpractice.proto.credentials";

// This is interface
message Credentials {
  oneof mode {
    EmailCredentials emailMode = 1;
    PhoneOtp phoneMode = 2;
  }
}

message EmailCredentials {
  string email = 1;
  string password = 2;
}

message PhoneOtp {
  int32 number = 1;
  int32 code = 2;
}
